{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Moving",
            "id": "17c310f6-9744-466d-ba18-7ab74486372e",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "c2617935-2063-4809-9bc2-1840c135c57d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChargeBobber",
                    "type": "Button",
                    "id": "5c79e407-743c-4ac3-a8f4-9d6396aece00",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CastBobber",
                    "type": "Button",
                    "id": "8ce527b5-d989-42dd-8e98-94d497d1a116",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WSAD",
                    "id": "505e13b3-313f-46a5-b3fc-4438b51a0efd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "947235d8-c5dc-46fb-9210-a302e691bb2e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "ca345b55-deee-4e50-856d-cda287e44149",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "f6ed9c7e-28a3-4a41-8345-e45e31675f3e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "e7faa6a7-e7c7-4ec2-8b14-c7b810b32483",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "22c6c5bd-c83f-4f9a-a2d9-55d7c069700e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ChargeBobber",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ee7cf90-5b76-4e06-b660-6ff6726ce510",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "CastBobber",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Fishing",
            "id": "0a8b8cf8-8ba1-40b2-80e0-e35c29605776",
            "actions": [
                {
                    "name": "Hook",
                    "type": "Button",
                    "id": "3f9c0c02-afea-43a8-9c46-4b527d3e9225",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reel",
                    "type": "Button",
                    "id": "30849b41-bc1f-47d0-a370-574f42bdd38a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "01e76480-9680-4de2-8a79-4f5c4ecdbabd",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3df6f22c-773a-4bdd-80f4-938bc9860425",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Looking",
            "id": "09c6ec77-31ca-4273-9cd9-59f63d590d80",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "8de9128d-f1f9-465b-95ad-2258ce2cd93d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4778e1ab-2aea-41f4-a9f5-d4da9e764576",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}